crates/core/tests/snapshots/snapshots__edit_ambiguous_hash_error.snap
---
source: crates/core/tests/snapshots.rs
assertion_line: 138
expression: normalized
---
Error: hash '61' matches 2 lines in <fixture> (lines 1, 3)
Hint: use a line-qualified hash like '2:f1' to disambiguate
