crates/core/tests/snapshots/snapshots__index_json_simple_lf.snap
---
source: crates/core/tests/snapshots.rs
assertion_line: 61
expression: parsed
---
{
  "file": "<fixture>",
  "lines": [
    {
      "hash": "45",
      "n": 1
    },
    {
      "hash": "0d",
      "n": 2
    },
    {
      "hash": "64",
      "n": 3
    },
    {
      "hash": "18",
      "n": 4
    },
    {
      "hash": "05",
      "n": 5
    },
    {
      "hash": "d2",
      "n": 6
    },
    {
      "hash": "90",
      "n": 7
    },
    {
      "hash": "72",
      "n": 8
    },
    {
      "hash": "18",
      "n": 9
    }
  ]
}
