crates/core/tests/snapshots/snapshots__index_pretty_simple_lf.snap
---
source: crates/core/tests/snapshots.rs
assertion_line: 43
expression: stdout
---
1:45
2:0d
3:64
4:18
5:05
6:d2
7:90
8:72
9:18
