crates/core/tests/snapshots/snapshots__read_binary_error.snap
---
source: crates/core/tests/snapshots.rs
assertion_line: 97
expression: normalized
---
Error: file '<fixture>' appears to be binary and cannot be edited safely
Hint: linehash only supports UTF-8 text files
