crates/core/tests/snapshots/snapshots__read_json_simple_lf.snap
---
source: crates/core/tests/snapshots.rs
assertion_line: 52
expression: parsed
---
{
  "file": "<fixture>",
  "inode": 0,
  "lines": [
    {
      "content": "function greet(name) {",
      "hash": "45",
      "n": 1
    },
    {
      "content": "  const message = `hello, ${name}`",
      "hash": "0d",
      "n": 2
    },
    {
      "content": "  return message",
      "hash": "64",
      "n": 3
    },
    {
      "content": "}",
      "hash": "18",
      "n": 4
    },
    {
      "content": "",
      "hash": "05",
      "n": 5
    },
    {
      "content": "export function main() {",
      "hash": "d2",
      "n": 6
    },
    {
      "content": "  const name = 'world'",
      "hash": "90",
      "n": 7
    },
    {
      "content": "  return greet(name)",
      "hash": "72",
      "n": 8
    },
    {
      "content": "}",
      "hash": "18",
      "n": 9
    }
  ],
  "mtime": 0,
  "mtime_nanos": 0,
  "newline": "lf",
  "trailing_newline": true
}
