crates/core/tests/snapshots/snapshots__read_mixed_newlines_error.snap
---
source: crates/core/tests/snapshots.rs
assertion_line: 108
expression: normalized
---
Error: file '<fixture>' uses mixed newline styles
Hint: run `dos2unix <file>` or `unix2dos <file>` to normalize first
