crates/core/tests/snapshots/snapshots__stats_json_simple_lf.snap
---
source: crates/core/tests/snapshots.rs
assertion_line: 72
expression: parsed
---
{
  "collision_count": 2,
  "collision_pairs": [
    [
      4,
      9
    ]
  ],
  "estimated_read_tokens": 53,
  "hash_length_advice": 3,
  "line_count": 9,
  "suggested_context_n": 3,
  "unique_hashes": 8
}
