crates/core/tests/snapshots/snapshots__verify_json_mixed_results.snap
---
source: crates/core/tests/snapshots.rs
assertion_line: 86
expression: parsed
---
[
  {
    "anchor": "1:45",
    "content": "function greet(name) {",
    "error": null,
    "line_no": 1,
    "status": "ok"
  },
  {
    "anchor": "bogus",
    "content": null,
    "error": "invalid anchor 'bogus'",
    "line_no": null,
    "status": "parse_error"
  }
]
